# my-fastapi-project

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 041fc63310e8_add_user_model.py  09a5795548c2_add_user_model.py  2483c13b41e6_add_user_model.py  31bce1bb24cc_initial_migration.py  67b127d646fb_add_user_model.py
models/: __init__.py  article.py  author.py  category.py  user.py
routers/: articles.py  auth.py  files.py
schemas/: article.py  user.py
services/: articles.py  pdf_generator.py
settings/configs/: app.py
utils/: security.py
